--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 <body>
-<!-- navbar -->
 <div class="container">
     <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
         <a class="navbar-brand col-sm-1"></a>   
@@ -19,10 +18,10 @@
         <div class="col-sm-5"></div>       
         <div class="collapse navbar-collapse col-sm-4 " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <li class="nav-item buttons">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item buttons">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
@@ -33,6 +32,7 @@
     </nav>    
 </div>
 
+    
 
 
 
