--- a/portfolio.html
+++ b/portfolio.html
@@ -8,31 +8,31 @@
 <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 <body>
-<!-- navbar -->
 <div class="container">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
-            <a class="navbar-brand col-sm-1"></a>   
-            <a class="navbar-brand col-sm-2 name text-center">Ethan Irvine</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="col-sm-5"></div>       
-            <div class="collapse navbar-collapse col-sm-4 " id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>      
-        </nav>    
-    </div>
-
+    <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
+        <a class="navbar-brand col-sm-1"></a>   
+        <a class="navbar-brand col-sm-2 name text-center">Ethan Irvine</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="col-sm-5"></div>       
+        <div class="collapse navbar-collapse col-sm-4 " id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item buttons">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+                <li class="nav-item buttons">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>      
+    </nav>    
+</div>
+    
+    
 
 
 
