created the main content area in the About me page, image is included

--- a/index.html
+++ b/index.html
@@ -8,31 +8,40 @@
 <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 <body>
-<div class="container">
+<!-- Navbar -->
+<div>
     <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
-        <a class="navbar-brand col-sm-1"></a>   
-        <a class="navbar-brand col-sm-2 name text-center">Ethan Irvine</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="col-sm-5"></div>       
-        <div class="collapse navbar-collapse col-sm-4 " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item buttons">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-                <li class="nav-item buttons">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>      
+        <div class="container"> 
+            <a class="navbar-brand col-sm-2 name text-center">Ethan Irvine</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse col-sm-4" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item buttons">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item buttons">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item buttons">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div> 
+        </div>     
     </nav>    
 </div>
 
-    
+<div class="jumbotron container about-me">
+    <h1>About Me</h1>
+    <img src="assets/images/Ethan-3.jpg" class="img-fluid" alt="Photo of Ethan Smiling while sitting on a rock">
+    <p>Hello my name is Ethan Irvine. I recently found out about what coding was and after about an hour of trying it I fell in love. 
+        I am a huge sports fan of the major US Sports and while I do have my favorite teams I just like to watch any game thats on TV. 
+        I also have a nerdy side, almost every Friday night you will find me playing Magic the Gathering at Fallen Phoenix Games.
+    </p>
+</div>
+ 
 
 
 
@@ -45,9 +54,3 @@
 </html>
 
 
-<!-- in case I decide to make the navbar content collapse into a mobile friendly button -->
-<!-- <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" 
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button> -->
