--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 <body>
+<!-- Navbar -->
 <div class="container">
     <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
         <a class="navbar-brand col-sm-1"></a>   
@@ -24,7 +25,7 @@
                 <li class="nav-item buttons">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item buttons">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
