Created Jumbotron on all pages and added content to it for about me page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div>
     <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
         <div class="container"> 
-            <a class="navbar-brand col-sm-2 name text-center">Ethan Irvine</a>
+            <a class="navbar-brand col-sm-4 col-md-3 col-lg-2 name text-center">Ethan Irvine</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,13 +33,18 @@
     </nav>    
 </div>
 
-<div class="jumbotron container about-me">
-    <h1>About Me</h1>
-    <img src="assets/images/Ethan-3.jpg" class="img-fluid" alt="Photo of Ethan Smiling while sitting on a rock">
-    <p>Hello my name is Ethan Irvine. I recently found out about what coding was and after about an hour of trying it I fell in love. 
-        I am a huge sports fan of the major US Sports and while I do have my favorite teams I just like to watch any game thats on TV. 
-        I also have a nerdy side, almost every Friday night you will find me playing Magic the Gathering at Fallen Phoenix Games.
-    </p>
+<div class="jumbotron border border-dark container content">
+    <div class="container">
+        <h1>About Me</h1>    
+        <hr class="line">
+        <div class="row">   
+            <img src="images/Ethan-3.jpg" class="img-fluid col-sm-6 col-md-3 col-lg-3" alt="Photo of Ethan Smiling while sitting on a rock">
+            <p class="col-sm-9">Hello my name is Ethan Irvine. I recently found out about what coding was and after about an hour of trying it, I knew that this is what I wanted to do. 
+                I am a huge sports fan of the major US Sports and while I do have my favorite teams I just like to watch any game thats on TV. 
+                I also have a nerdy side, almost every Friday night you will find me playing Magic the Gathering at Fallen Phoenix Games.
+            </p>
+        </div>
+    </div>
 </div>
  
 
