--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <link rel="stylesheet" type="text/css" href="style.css"> -->
 
-<body>
+<body class="body">
 <!-- Navbar -->
 <div>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark border-bottom border-dark">
         <div class="container"> 
             <a class="navbar-brand col-sm-4 col-md-3 col-lg-2 name text-center">Ethan Irvine</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
  
 
 
-
+<footer class="static-bottom footer"></footer>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
