--- a/portfolio.html
+++ b/portfolio.html
@@ -7,38 +7,45 @@
 
 <link rel="stylesheet" type="text/css" href="style.css"> -->
 
-<body>
+<body class="body">
 <!-- Navbar -->
-<div class="container">
-    <nav class="navbar navbar-expand-md fixed-top navbar-light border-bottom border-dark">
-        <a class="navbar-brand col-sm-1"></a>   
-        <a class="navbar-brand col-sm-2 name text-center">Ethan Irvine</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="col-sm-5"></div>       
-        <div class="collapse navbar-collapse col-sm-4 " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item buttons">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-                <li class="nav-item buttons">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item buttons">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>      
+<div>
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark border-bottom border-dark">
+        <div class="container"> 
+            <a class="navbar-brand col-sm-4 col-md-3 col-lg-2 name text-center">Ethan Irvine</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse col-sm-4" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item buttons">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item buttons">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item buttons">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div> 
+        </div>     
     </nav>    
 </div>
     
 <div class="jumbotron border border-dark container content">
+    <div class="container">
+        <h1>Portfolio</h1>    
+        <hr class="line">
+        <div class="jumbotron">
+            <h1 class="text-center">Coming Soon...</h1>
+         </div>
+    </div>
 </div>
 
 
 
-
+<footer class="static-bottom footer"></footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
