--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>About Me</h1>    
         <hr class="line">
         <div class="row">   
-            <img src="images/Ethan-3.jpg" class="img-fluid col-sm-6 col-md-3 col-lg-3" alt="Photo of Ethan Smiling while sitting on a rock">
+            <img src="images/Ethan-3.jpg" class="img-fluid col-sm-3 col-md-3 col-lg-3" alt="Photo of Ethan Smiling while sitting on a rock">
             <p class="col-sm-9">Hello my name is Ethan Irvine. I recently found out about what coding was and after about an hour of trying it, I knew that this is what I wanted to do. 
                 I am a huge sports fan of the major US Sports and while I do have my favorite teams I just like to watch any game thats on TV. 
                 I also have a nerdy side, almost every Friday night you will find me playing Magic the Gathering at Fallen Phoenix Games.
@@ -49,7 +49,7 @@
  
 
 
-<footer class="static-bottom footer"></footer>
+<footer class="fixed-bottom footer"></footer>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
